--- a/index.html
+++ b/index.html
@@ -1,95 +1,131 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saúde e Bem-Estar</title>
+    <title>Saúde e Bem-Estar 🏥💙</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-            color: #333;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            font-size: 24px;
-        }
-        .section {
-            padding: 20px;
-            background-color: white;
-            margin: 10px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h2 {
-            color: #4CAF50;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        ul li {
-            padding: 8px 0;
-        }
+        body { font-family: Arial, sans-serif; margin: 20px; background-color: #f4f4f4; }
+        .section { background: white; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 2px 2px 10px rgba(0,0,0,0.1); }
+        h2 { color: #2c3e50; }
+        ul { list-style: none; padding: 0; }
+        li { margin: 10px 0; }
+        .calculator { margin-top: 20px; padding: 15px; background: #e3f2fd; border-radius: 8px; }
+        input, button { padding: 8px; margin-top: 5px; }
     </style>
 </head>
 <body>
 
-<header>🌿 Saúde e Bem-Estar</header>
+    <section class="section">
+        <h2>🩺 Dicas de Saúde para o Dia a Dia</h2>
+        <ul>
+            <li>🥦 <strong>Coma alimentos ricos em fibras:</strong> Grãos integrais, frutas e vegetais ajudam na digestão.</li>
+            <li>🏃 <strong>Fique em movimento:</strong> Exercícios diários melhoram a saúde geral.</li>
+            <li>🍟 <strong>Evite gorduras saturadas:</strong> Reduza frituras e fast food.</li>
+            <li>⚖️ <strong>Preste atenção ao seu peso:</strong> Manter um peso saudável reduz riscos de doenças.</li>
+            <li>🌞 <strong>Não esqueça do sol:</strong> 10-15 minutos de sol ajudam na produção de vitamina D.</li>
+        </ul>
+    </section>
 
-<section id="daily-tips" class="section">
-    <h2>💡 Dicas de Saúde para o Dia a Dia</h2>
-    <ul>
-        <li>🥦 <strong>Coma alimentos ricos em fibras:</strong> Grãos integrais, frutas e vegetais ajudam na digestão e fortalecem o sistema imunológico.</li>
-        <li>🏃‍♂️ <strong>Fique em movimento:</strong> Não fique parado por muito tempo. Levante-se, alongue-se e pratique atividade física regularmente.</li>
-        <li>🍟 <strong>Evite alimentos ricos em gorduras saturadas:</strong> Reduza o consumo de frituras, industrializados e fast food.</li>
-        <li>⚖️ <strong>Preste atenção ao seu peso:</strong> Manter um peso saudável reduz o risco de diabetes tipo 2 e problemas cardíacos.</li>
-        <li>☀️ <strong>Não esqueça do sol:</strong> Exponha-se ao sol de forma segura (10-15 min/dia) para garantir níveis adequados de vitamina D.</li>
-    </ul>
-</section>
+    <section class="section">
+        <h2>⚕️ Prevenção de Doenças Comuns</h2>
+        <h3>1️⃣ Hipertensão (Pressão Alta)</h3>
+        <p>Evite excesso de sal e pratique exercícios para manter a pressão controlada. 🏋️</p>
 
-<section id="disease-prevention" class="section">
-    <h2>🩺 Prevenção de Doenças Comuns</h2>
-    <h3>1️⃣ Hipertensão (Pressão Alta)</h3>
-    <p>🩸 A hipertensão é chamada de "assassino silencioso". Mantenha a pressão sob controle com exercícios, dieta balanceada e pouco sal.</p>
+        <h3>2️⃣ Diabetes Tipo 2</h3>
+        <p>Alimentação saudável e controle do peso são fundamentais para prevenção. 🍏</p>
 
-    <h3>2️⃣ Diabetes Tipo 2</h3>
-    <p>🍬 O corpo não usa insulina corretamente. Prevenção: alimentação saudável, controle do peso e atividade física constante.</p>
+        <h3>3️⃣ Doenças Cardiovasculares</h3>
+        <p>Evite fumar, controle o colesterol e pratique exercícios. ❤️‍🔥</p>
 
-    <h3>3️⃣ Doenças Cardiovasculares</h3>
-    <p>❤️ Manter uma dieta equilibrada, praticar exercícios e evitar fumar são essenciais para prevenir doenças do coração.</p>
+        <h3>4️⃣ Doenças Respiratórias</h3>
+        <p>Evite poluentes, mantenha a casa ventilada e faça exercícios respiratórios. 🌬️</p>
+    </section>
 
-    <h3>4️⃣ Doenças Respiratórias</h3>
-    <p>🌬️ Para prevenir asma e outras doenças respiratórias, evite poluentes, tenha um ambiente ventilado e faça exercícios respiratórios.</p>
-</section>
+    <section class="section">
+        <h2>🧘‍♂️ Saúde Mental: A Importância do Equilíbrio Emocional</h2>
+        <ul>
+            <li>🧘‍♀️ <strong>Pratique meditação:</strong> Reduz o estresse e melhora o foco.</li>
+            <li>😴 <strong>Durma bem:</strong> 7-8 horas de sono por noite são essenciais.</li>
+            <li>💬 <strong>Converse com alguém:</strong> Compartilhar emoções ajuda a aliviar o estresse.</li>
+            <li>🤝 <strong>Evite o isolamento:</strong> Relacionamentos sociais são fundamentais para o bem-estar.</li>
+        </ul>
+    </section>
 
-<section id="mental-health" class="section">
-    <h2>🧠 Saúde Mental: A Importância do Equilíbrio Emocional</h2>
-    <h3>Dicas para Cuidar da Sua Mente:</h3>
-    <ul>
-        <li>🧘‍♀️ <strong>Pratique a meditação:</strong> Reduz o estresse e melhora o foco mental.</li>
-        <li>😴 <strong>Durma bem:</strong> 7 a 8 horas de sono são fundamentais para a saúde mental.</li>
-        <li>🗣️ <strong>Converse com alguém:</strong> Falar com amigos, familiares ou um terapeuta pode aliviar o peso emocional.</li>
-        <li>🤝 <strong>Evite o isolamento:</strong> Interaja socialmente e participe de atividades comunitárias.</li>
-    </ul>
-</section>
+    <section class="section">
+        <h2>🍽️ Receitas Saudáveis para o Seu Bem-Estar</h2>
+        <h3>🥗 Salada Colorida de Quinoa</h3>
+        <p>Quinoa com tomate, pepino, cenoura e ervas frescas, temperada com azeite e limão.</p>
 
-<section id="healthy-recipes" class="section">
-    <h2>🥗 Receitas Saudáveis para o Seu Bem-Estar</h2>
-    <h3>1️⃣ Salada Colorida de Quinoa</h3>
-    <p>🌈 Misture quinoa com tomate, pepino, cenoura, pimentão e ervas frescas. Tempere com azeite e limão. Opção nutritiva para o almoço!</p>
+        <h3>🥤 Smoothie Verde Energético</h3>
+        <p>Bata espinafre, abacaxi, maçã, gengibre e água de coco para um smoothie saudável.</p>
 
-    <h3>2️⃣ Smoothie Verde Energético</h3>
-    <p>🍹 Bata espinafre, abacaxi, maçã, gengibre e água de coco para um smoothie refrescante e cheio de nutrientes.</p>
+        <h3>🍗 Frango Grelhado com Legumes</h3>
+        <p>Peito de frango grelhado com legumes assados como cenoura, abobrinha e brócolis.</p>
+    </section>
 
-    <h3>3️⃣ Frango Grelhado com Legumes</h3>
-    <p>🍗 Grelhe peito de frango e sirva com legumes assados (cenoura, abobrinha, brócolis). Perfeito para uma alimentação equilibrada.</p>
-</section>
+    <section class="section calculator">
+        <h2>🧮 Calculadoras de Saúde</h2>
+
+        <div>
+            <h3>📏 Cálculo do IMC (Índice de Massa Corporal)</h3>
+            <label>Peso (kg):</label>
+            <input type="number" id="pesoIMC">
+            <label>Altura (m):</label>
+            <input type="number" step="0.01" id="alturaIMC">
+            <button onclick="calcularIMC()">Calcular</button>
+            <p id="resultadoIMC"></p>
+        </div>
+
+        <div>
+            <h3>❤️ Frequência Cardíaca Máxima</h3>
+            <label>Idade:</label>
+            <input type="number" id="idadeFCM">
+            <button onclick="calcularFCM()">Calcular</button>
+            <p id="resultadoFCM"></p>
+        </div>
+
+        <div>
+            <h3>💧 Cálculo da Ingestão Diária de Água</h3>
+            <label>Peso (kg):</label>
+            <input type="number" id="pesoAgua">
+            <button onclick="calcularAgua()">Calcular</button>
+            <p id="resultadoAgua"></p>
+        </div>
+    </section>
+
+    <script>
+        function calcularIMC() {
+            let peso = document.getElementById("pesoIMC").value;
+            let altura = document.getElementById("alturaIMC").value;
+            if (peso && altura) {
+                let imc = (peso / (altura * altura)).toFixed(2);
+                document.getElementById("resultadoIMC").innerText = `Seu IMC é: ${imc}`;
+            } else {
+                document.getElementById("resultadoIMC").innerText = "Preencha os valores corretamente.";
+            }
+        }
+
+        function calcularFCM() {
+            let idade = document.getElementById("idadeFCM").value;
+            if (idade) {
+                let fcm = 220 - idade;
+                document.getElementById("resultadoFCM").innerText = `Sua frequência cardíaca máxima é: ${fcm} bpm`;
+            } else {
+                document.getElementById("resultadoFCM").innerText = "Preencha sua idade corretamente.";
+            }
+        }
+
+        function calcularAgua() {
+            let peso = document.getElementById("pesoAgua").value;
+            if (peso) {
+                let agua = (peso * 35) / 1000;
+                document.getElementById("resultadoAgua").innerText = `Você deve beber cerca de ${agua.toFixed(2)} litros de água por dia. 💧`;
+            } else {
+                document.getElementById("resultadoAgua").innerText = "Informe seu peso corretamente.";
+            }
+        }
+    </script>
 
 </body>
 </html>
